--- a/index.html
+++ b/index.html
@@ -195,10 +195,10 @@
                         </div>
                         <p>TREK (abbreviation of TomoRrow's Entrepreneur's Kapital) is a social fund-raising ecosystem 
                             for all investors, founders and experts to communicate, invest and track, powered by 
-                            blockchain technology and gamified communication platform.</p>
-                            <a class="tf-button st2 btn-effect" href="coming-soon.html">   
+                            the web3 technology and metaverse platform.</p>
+                            <a class="tf-button st2 btn-effect" href="#">   
                                 <span class="boder-fade"></span>                                     
-                                <span class="effect">Play</span>
+                                <span class="effect">Join us</span>
                             </a>
                     </div>
                 </div>
@@ -215,7 +215,7 @@
                         </div>
                         <div class="box-text corner-box mb-0">
                             <div class="h7">TREK Fund</div>
-                            <p>Financing the most potential projects to make big improvement in the blockhain revolution.</p>
+                            <p>Financing the most potential projects to make big improvement in the blockhain revolution and the web3 technology.</p>
                         </div>
                     </div>
                 </div>
@@ -241,20 +241,9 @@
                                     <h5>Q3 2022</h5>
                                     <ul>
                                         <li>Seed sale completed</li>
-                                        <li>Completed incentive mechanism for KOL & advisor</li>
+                                        <li>Completed incentive mechanism</li>
                                         <li>Live website</li>
                                         <li>Marketing set-up</li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="rm-box" data-aos="fade-right" data-aos-duration="1200">
-                                <div class="corner-box">
-                                    <h5>Q4 2022</h5>
-                                    <ul>
-                                        <li>Private sale completed</li>
-                                        <li>TREK launchpad</li>
-                                        <li>Mainnet smart contract</li>
-                                        <li>Marketing kick-off</li>
                                     </ul>
                                 </div>
                             </div>
@@ -269,20 +258,7 @@
                                     </ul>
                                 </div>
                             </div>
-                        </div>
-                        <div class="box box-right">
-                            <div class="rm-box style" data-aos="fade-left" data-aos-duration="1200">
-                                <div class="corner-box">
-                                    <h5>Q2 2023</h5>
-                                    <ul>
-                                        <li>Public sale (IEO)</li>
-                                        <li>Active TREK eco</li>
-                                        <li>Marketing campaign for sandbox policy in Viet Nam kick-off</li>
-                                        <li>...</li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="rm-box" data-aos="fade-left" data-aos-duration="1200">
+                            <div class="rm-box" data-aos="fade-right" data-aos-duration="1200">
                                 <div class="corner-box">
                                     <h5>Q3 2023</h5>
                                     <ul>
@@ -293,6 +269,30 @@
                                     </ul>
                                 </div>
                             </div>
+                        </div>
+                        <div class="box box-right">
+                            <div class="rm-box style" data-aos="fade-left" data-aos-duration="1200">
+                                <div class="corner-box">
+                                    <h5>Q4 2022</h5>
+                                    <ul>
+                                        <li>Private sale completed</li>
+                                        <li>TREK launchpad</li>
+                                        <li>Mainnet smart contract</li>
+                                        <li>Marketing kick-off</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="rm-box" data-aos="fade-left" data-aos-duration="1200">
+                                <div class="corner-box">
+                                    <h5>Q2 2023</h5>
+                                    <ul>
+                                        <li>Public sale (IEO)</li>
+                                        <li>Active TREK eco</li>
+                                        <li>Marketing campaign for sandbox policy</li>
+                                        <!-- <li>___</li> -->
+                                    </ul>
+                                </div>
+                            </div>
                             <div class="mb-0 rm-box" data-aos="fade-left" data-aos-duration="1200">
                                 <div class="corner-box">
                                     <h5>Q4 2023</h5>
@@ -300,7 +300,7 @@
                                         <li>Super event for asia startups</li>
                                         <li>Third batch of investment</li>
                                         <li>Policy campaign</li>
-                                        <li>Super event kickoffs in south east asia</li>
+                                        <li>Super event kickoffs</li>
                                     </ul>
                                 </div>
                             </div>
