--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
                             <a href="contact.html">Contact</a>
                         </li> -->
                         <li class="menu-item">
+                            <a href="#">Home</a>
+                        </li>
+                        <li class="menu-item">
                             <a href="#">TREK Launchpad</a>
                         </li>
                         <li class="menu-item">
@@ -106,7 +109,8 @@
                                     <div class="box-slider">
                                         <div class="content-box">
                                             <h1 class="title">A Sand Hill's Metaverse</h1>
-                                            <p class="sub-title">The pioneer in providing the STO service for Start-ups and SMEs internationally.</p>
+                                            <p class="sub-title">By taking advantage of the web3 technology and metaverse platform, 
+                                                we would like to provide the STO service for Start-ups and SMEs internationally.</p>
                                             <div class="wrap-btn">
                                                 <a href="#" class="tf-button-st2 btn-effect" data-toggle="modal" data-target="#popup_bid"><span class="effect">connect wallet</span></a>
                                                 <a href="coming-soon.html" class="tf-button btn-effect popup-youtube">
@@ -370,9 +374,8 @@
                         <div class="h7 txt-tranf-cap m-b16">
                             Who we are
                         </div>
-                        <p>Purus, laoreet dui augue ut euismod. Elementum ante sociis volutpat tellus enim, nisl consectetur mauris. 
-                            Venenatis congue id quis eget viverra. 
-                            Vestibulum, justo, euismod congue feugiat eget fames gravida posuere. </p>
+                        <p>Our teammates consist of experienced professionals with diversified competences 
+                            in AI, blockchain, economics and legal.</p>
                     </div>
                     <div class="button-fx m-t60" data-aos="fade-in" data-aos-duration="800">
                         <div class="btn-prev button-prev-team">
