--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
                                         </div>
                                         <div class="content">
                                             <div class="h8">Grey</div>
-                                            <p>Senior Developer</p>
+                                            <p>Product Owner</p>
                                             <ul class="social">
                                                 <li><a href="#">
                                                     <svg width="14" height="12" viewBox="0 0 14 12" fill="none" xmlns="http://www.w3.org/2000/svg">
