--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="https://raw.githubusercontent.com/trek-fund/trek-fund.github.io/main/assets/images/favicon.png" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/trek-fund/trek-fund.github.io/main/assets/images/thumbnail.png" />
     <meta property="og:image:width" content="200" />
-    <meta property="og:image:height" content="200"; />
+    <meta property="og:image:height" content="200" />
     <title>TREK - A Sand Hill's Metaverse</title>
     <link rel="stylesheet" href="app/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="app/swiper/swiper-bundle.min.css">
