--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta property="og:image" content="https://raw.githubusercontent.com/trek-fund/trek-fund.github.io/main/assets/images/thumbnail.png" />
     <meta property="og:image:width" content="200" />
     <meta property="og:image:height" content="200" />
+    <meta property="og:url" content="https://trek-fund.github.io/"/>
     <title>TREK - A Sand Hill's Metaverse</title>
     <link rel="stylesheet" href="app/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="app/swiper/swiper-bundle.min.css">
