--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:image" content="https://raw.githubusercontent.com/trek-fund/trek-fund.github.io/main/assets/images/thumbnail.png" />
-    <meta property="og:image:width" content="200" />
-    <meta property="og:image:height" content="200" />
-    <!-- <meta property="og:url" content="https://trek-fund.github.io/"/> -->
+    <meta property="og:image:width" content="201" />
+    <meta property="og:image:height" content="201" />
+    <meta property="og:url" content="https://trek-fund.github.io/"/>
     <title>TREK - A Sand Hill's Metaverse</title>
     <link rel="stylesheet" href="app/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="app/swiper/swiper-bundle.min.css">
