Update link to city

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             <a href="#">TREK Launchpad</a>
                         </li>
                         <li class="menu-item">
-                            <a href="#">TREK City</a>
+                            <a href="https:/city.trek.fund">TREK City</a>
                         </li>
                         <li class="menu-item">
                             <a href="#">Whitepaper</a>
@@ -1113,42 +1113,42 @@
                                 <img src="assets/images/common/icon-1.png" alt="Image">
                             </div>
                             <h6 class="heading"><a href="login.html">Meta Mask</a> </h6>
-                            <p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+                            <p class="content"></p>
                         </div>
                         <div class="sc-box">
                             <div class="img">
                                 <img src="assets/images/common/icon-6.png" alt="Image">
                             </div>
                             <h6 class="heading"><a href="login.html"> Bitski</a></h6>
-                            <p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+                            <p class="content"></p>
                         </div>
                         <div class="sc-box">
                             <div class="img">
                                 <img src="assets/images/common/vector.png" alt="Image">
                             </div>
                             <h6 class="heading"><a href="login.html">Fortmatic</a> </h6>
-                            <p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+                            <p class="content"></p>
                         </div>
                         <div class="sc-box">
                             <div class="img">
                                 <img src="assets/images/common/icon-2.png" alt="Image">
                             </div>
                             <h6 class="heading"><a href="login.html">Coinbase Wallet</a> </h6>
-                            <p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+                            <p class="content"></p>
                         </div>
                         <div class="sc-box">
                             <div class="img">
                                 <img src="assets/images/common/icon-3.png" alt="Image">
                             </div>
                             <h6 class="heading"><a href="login.html">Authereum</a> </h6>
-                            <p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+                            <p class="content"></p>
                         </div>
                         <div class="sc-box">
                             <div class="img">
                                 <img src="assets/images/common/icon-4.png" alt="Image">
                             </div>
                             <h6 class="heading"><a href="login.html">Kaikas</a> </h6>
-                            <p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+                            <p class="content"></p>
                         </div>
                     </div>  
                 </div>
