Update link to city

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             <a href="#">TREK Launchpad</a>
                         </li>
                         <li class="menu-item">
-                            <a href="https:/city.trek.fund">TREK City</a>
+                            <a href="https://city.trek.fund/">TREK City</a>
                         </li>
                         <li class="menu-item">
                             <a href="#">Whitepaper</a>
